# HelloWorld

./: Cargo.toml  README_CODEMAGIC.md  UI_STYLE_GUIDE.md  build.md  build_client.ps1  codemagic.yaml  generate_project.rb  instruction.md  password.txt
figma-ui/chatlist-ui/src/app/: App.tsx
figma-ui/chatlist-ui/src/app/components/: ChatList.tsx  ChatWindow.tsx  Message.tsx  Sidebar.tsx
ios_client/Core/: CoreBridge-Bridging-Header.h  CoreBridge.cpp  CoreBridge.h  CoreWrapper.swift
ios_client/Resources/: Info.plist  LaunchScreen.storyboard
ios_client/Views/: ChatListView.swift  ChatView.swift  CommonStyles.swift  EditBioView.swift  EditProfileView.swift  EditTagView.swift  ImageCropperView.swift  LoginView.swift  MainApp.swift  RegistrationFlowView.swift  SettingsView.swift  WelcomeView.swift
logs/: build_ios_app.md  build_rast_core.md
src/: ffi.rs  lib.rs
src/crypto/: crypto_service.rs  key_manager.rs  mod.rs
src/models/: chat.rs  ids.rs  message.rs  mod.rs  user.rs
