[package]
name = "helloworld_core"
version = "0.0.1"
edition = "2021"

[lib]
name = "helloworld_core"
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
serde = { version = "1", features = ["derive"] }
base64 = "0.22"
thiserror = "1"
rand_core = "0.6"
getrandom = "0.2"
x25519-dalek = { version = "2", features = ["static_secrets"] }
sha2 = "0.10"
hkdf = "0.12"
chacha20poly1305 = { version = "0.10", features = ["std"] }
libc = "0.2"
